Modificacion de los Manuales creacion de metodo registrarCuraPeces en transcripciones y modificacion de las clases pez y tanque para incluir enfermo en el json